# overgrowth

./: .clang-format  .editorconfig  .gitignore  .gitmodules  COMPILING.md  CONTRIBUTING.md  Character Scale related fixes having to do with rendering - Testing and Other Fun Information.txt  Disable Editor In Media Mode - Testing and Other Fun Information.txt  Disable Selecting Sun Through Objects - Testing and Other Fun Information.txt  Fix 'View Nav hints, Nav mesh, Jump nodes' and Ctrl+1,2,3 editor hotkeys - Testing and Other Fun Information.txt  Makefile  New Editor Hotkeys - Testing and Other Fun Information.txt  README.md  Range Adjust - Testing and Other Fun Information.txt  TODO  Toggle Shadow Decal Edit - Testing and Other Fun Information.txt  archlinux_package_requirements  config.txt  env_blob_shadow.xml  env_blob_shadow_square.xml  roundhouse (big range - 101.5 to be exact).xml  roundhouse (small range - 0.1 to be exact).xml  sonar-project.properties  spearslash.xml  spearslashclose.xml  spearstab.xml  spearstabfar.xml  spearsweep.xml  steam_appid.txt
Libraries/crunch-ea9b8d/: CHANGELOG.md  CMakeLists.txt  README.md  crn.2008.sln  crn_examples.2008.sln  license.txt
Libraries/crunch-ea9b8d/crnlib/: crn_arealist.cpp  crn_arealist.h  crn_assert.cpp  crn_assert.h  crn_atomics.h  crn_buffer_stream.h  crn_cfile_stream.h  crn_checksum.cpp  crn_checksum.h  crn_clusterizer.h  crn_color.h  crn_colorized_console.cpp  crn_colorized_console.h  crn_command_line_params.cpp  crn_command_line_params.h  crn_comp.cpp  crn_comp.h  crn_console.cpp  crn_console.h  crn_core.cpp  crn_core.h  crn_data_stream.cpp  crn_data_stream.h  crn_data_stream_serializer.h  crn_dds_comp.cpp  crn_dds_comp.h  crn_decomp.cpp  crn_dxt.cpp  crn_dxt.h  crn_dxt1.cpp  crn_dxt1.h  crn_dxt5a.cpp  crn_dxt5a.h  crn_dxt_endpoint_refiner.cpp  crn_dxt_endpoint_refiner.h  crn_dxt_fast.cpp  crn_dxt_fast.h  crn_dxt_hc.cpp  crn_dxt_hc.h  crn_dxt_hc_common.cpp  (+140 more)
Libraries/crunch-ea9b8d/crunch/: corpus_gen.cpp  corpus_gen.h  corpus_test.cpp  corpus_test.h  crunch.2008.vcproj  crunch.cpp
Libraries/crunch-ea9b8d/emscripten/: crunch_lib.cpp
Libraries/crunch-ea9b8d/example1/: example1.2008.vcproj  example1.cpp
Libraries/crunch-ea9b8d/example2/: example2.2008.vcproj  example2.cpp  timer.cpp  timer.h
Libraries/crunch-ea9b8d/example3/: example3.2008.vcproj  example3.cpp  stb_image.h
Libraries/crunch-ea9b8d/inc/: crn_decomp.h  crnlib.h  dds_defs.h
Libraries/glew-urkle-core/: CMakeLists.txt
Libraries/glew-urkle-core/include/GL/: glew.h  glxew.h  wglew.h
Libraries/glew-urkle-core/src/: glew.c
Libraries/nvidia-texture-tools-read-only/src/nvmath/: Basis.cpp  Basis.h  Bezier.cpp  Bezier.h  Box.h  CMakeLists.txt  Fitting.cpp  Fitting.h  Frustum.cpp  Frustum.h  Half.cpp  Half.h  KahanSum.h  Matrix.h  Montecarlo.cpp  Montecarlo.h  Plane.h  Polygon.cpp  Polygon.h  Quaternion.h  Solver.cpp  Solver.h  Sparse.cpp  Sparse.h  SphericalHarmonic.cpp  SphericalHarmonic.h  TriBox.cpp  TypeSerialization.cpp  TypeSerialization.h  Vector.h  nvmath.h
Libraries/qhull_git_22feb2012/: .gitignore  CMakeLists.txt  File_id.diz  Makefile  index.htm
Libraries/qhull_git_22feb2012/config/: Makefile-am-eg  Makefile-am-html  Makefile-am-libqhull  Makefile-am-main  Makefile.am  README  bootstrap.sh  changelog  configure.ac
Libraries/qhull_git_22feb2012/config/patches/: 00list  QHpointer.dpatch  make-new-msg.dpatch
Libraries/qhull_git_22feb2012/eg/: make-vcproj.sh  q_eg  q_egtest  q_test  q_test-ok.txt  q_test.bat  qhull-zip.sh  qhulltest-ok.txt
Libraries/qhull_git_22feb2012/html/: index.htm  qconvex.htm  qdelau_f.htm  qdelaun.htm  qh-code.htm  qh-eg.htm  qh-faq.htm  qh-get.htm  qh-impre.htm  qh-optc.htm  qh-optf.htm  qh-optg.htm  qh-opto.htm  qh-optp.htm  qh-optq.htm  qh-optt.htm  qh-quick.htm  qhalf.htm  qhull.htm  qvoron_f.htm  qvoronoi.htm  rbox.htm
Libraries/qhull_git_22feb2012/src/: Changes.txt  qhull-all.pro  qhull-app-c.pri  qhull-app-cpp.pri  qhull-app-shared.pri  qhull-app-sharedp.pri  qhull-libqhull-src.pri  qhull-warn.pri
Libraries/qhull_git_22feb2012/src/libqhull/: Makefile  index.htm  qh-geom.htm  qh-globa.htm  qh-io.htm  qh-mem.htm  qh-merge.htm  qh-poly.htm  qh-qhull.htm  qh-set.htm  qh-stat.htm  qh-user.htm  qhull-exports.def
Libraries/qhull_git_22feb2012/src/libqhullcpp/: Coordinates.cpp  Coordinates.h  PointCoordinates.cpp  PointCoordinates.h  Qhull.cpp  Qhull.h  QhullError.h  QhullFacet.cpp  QhullFacet.h  QhullFacetList.cpp  QhullFacetList.h  QhullFacetSet.cpp  QhullFacetSet.h  QhullHyperplane.cpp  QhullHyperplane.h  QhullIterator.h  QhullLinkedList.h  QhullPoint.cpp  QhullPoint.h  QhullPointSet.cpp  QhullPointSet.h  QhullPoints.cpp  QhullPoints.h  QhullQh.cpp  QhullQh.h  QhullRidge.cpp  QhullRidge.h  QhullSet.cpp  QhullSet.h  QhullSets.h  QhullStat.cpp  QhullStat.h  QhullVertex.cpp  QhullVertex.h  QhullVertexSet.cpp  QhullVertexSet.h  RboxPoints.cpp  RboxPoints.h  RoadError.cpp  RoadError.h  (+8 more)
Libraries/qhull_git_22feb2012/src/libqhullp/: libqhullp.pro  qhull_p-exports.def
Libraries/qhull_git_22feb2012/src/libqhullstaticp/: libqhullstaticp.pro
Libraries/qhull_git_22feb2012/src/qconvex/: qconvex.c
Libraries/qhull_git_22feb2012/src/qdelaunay/: qdelaun.c
Libraries/qhull_git_22feb2012/src/qhalf/: qhalf.c
Libraries/qhull_git_22feb2012/src/qhull/: qhull.pro  unix.c
Libraries/qhull_git_22feb2012/src/qhulltest/: Coordinates_test.cpp  PointCoordinates_test.cpp  Point_test.cpp  QhullFacetList_test.cpp  QhullFacetSet_test.cpp  QhullFacet_test.cpp  QhullHyperplane_test.cpp  QhullLinkedList_test.cpp  QhullPointSet_test.cpp  QhullPoint_test.cpp  QhullPoints_test.cpp  QhullRidge_test.cpp  (+10 more)
Projects/TheoraPlayer/: CMakeLists.txt
Projects/binn/: CMakeLists.txt
Projects/libgfx/: CMakeLists.txt
Projects/minizip/: CMakeLists.txt
Projects/mixkit/: CMakeLists.txt
Projects/murmurhash3/: CMakeLists.txt
Projects/qslim/: CMakeLists.txt
Projects/recastnavigation/: CMakeLists.txt
Tests/: CMakeLists.txt  atlas_test.cpp  globals.cpp  modloading_test.cpp  string_test.cpp  vec2_test.cpp  vec3_test.cpp  vec4_test.cpp
(+21675 files in other folders)
