CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
SET(CMAKE_XCODE_ATTRIBUTE_GCC_VERSION "com.apple.compilers.llvmgcc42")
PROJECT(crnlib)

SET(SRCDIR "${CMAKE_CURRENT_SOURCE_DIR}/crnlib")
SET(LIBDIR "${CMAKE_CURRENT_SOURCE_DIR}/..")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib
    ${CMAKE_CURRENT_SOURCE_DIR}/inc
    ${LIBDIR}/boost_1_52_0
)

FILE(GLOB SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_endpoint_refiner.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_fast.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_hc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_hc_common.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_image.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt1.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt5a.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dynamic_stream.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dynamic_string.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_etc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_file_utils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_find_files.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_freeimage_image_utils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_hash.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_hash_map.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_helpers.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_huffman_codes.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_image.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_image_utils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_intersect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_jpgd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_jpge.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_ktx_texture.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_lzma_codec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_math.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_matrix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_mem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_miniz.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_mipmapped_texture.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_packed_uint.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_pixel_format.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_platform.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_prefix_coding.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_qdxt1.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_qdxt5.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_radix_sort.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_rand.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_ray.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_rect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_resample_filters.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_resampler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_rg_etc1.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_ryg_dxt.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_ryg_types.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_sparse_array.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_sparse_bit_array.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_strutils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_symbol_codec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_texture_comp.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_texture_conversion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_texture_file_types.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threaded_clusterizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threaded_resampler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threading.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threading_null.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threading_pthreads.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_timer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_traits.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_tree_clusterizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_types.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_utils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_value.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_vec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_vec_interval.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_vector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_vector2d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_winhdr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_zeng.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zBuf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zCrc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zFile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zVersion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Alloc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Bcj2.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Bra.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_CpuArch.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzFind.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzHash.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzmaDec.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzmaEnc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzmaLib.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_MyVersion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Types.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_arealist.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_assert.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_checksum.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_colorized_console.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_command_line_params.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_comp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_console.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_data_stream.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dds_comp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_decomp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_endpoint_refiner.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_fast.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_hc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_hc_common.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt_image.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt1.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt5a.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dynamic_string.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_etc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_file_utils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_find_files.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_hash.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_hash_map.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_huffman_codes.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_image_utils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_jpgd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_jpge.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_ktx_texture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_lzma_codec.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_math.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_mem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_miniz.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_mipmapped_texture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_pixel_format.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_platform.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_prefix_coding.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_qdxt1.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_qdxt5.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_rand.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_resample_filters.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_resampler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_rg_etc1.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_ryg_dxt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_sparse_bit_array.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_stb_image.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_strutils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_symbol_codec.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_texture_comp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_texture_conversion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_texture_file_types.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threaded_resampler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threading_pthreads.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_timer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_utils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_value.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_vector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_zeng.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crnlib.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zBuf.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zBuf2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zCrc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zFile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_7zStream.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Alloc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Bcj2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Bra.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Bra86.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_BraIA64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzFind.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzmaDec.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzmaEnc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzmaLib.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_arealist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_assert.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_atomics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_buffer_stream.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_cfile_stream.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_checksum.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_clusterizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_color.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_colorized_console.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_command_line_params.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_comp.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_console.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_core.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_data_stream.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_data_stream_serializer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dds_comp.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_dxt.h
    ${CMAKE_CURRENT_SOURCE_DIR}/inc/crn_decomp.h
    ${CMAKE_CURRENT_SOURCE_DIR}/inc/crnlib.h
    ${CMAKE_CURRENT_SOURCE_DIR}/inc/dds_defs.h
)

IF(WIN32)
FILE(GLOB SOURCE_FILES_WIN32 RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzFindMt.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_LzFindMt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Threads.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/lzma_Threads.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threading_win32.h
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/crn_threading_win32.cpp
)
LIST(APPEND SOURCE_FILES ${SOURCE_FILES_WIN32})
ENDIF()

IF(APPLE)
FILE(GLOB SOURCE_FILES_APPLE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/crnlib/osx_pthread_spinlock_shim.h
)
LIST(APPEND SOURCE_FILES ${SOURCE_FILES_APPLE})
ENDIF()

ADD_LIBRARY(crnlib STATIC ${SOURCE_FILES})
IF(APPLE)
    SET_TARGET_PROPERTIES(crnlib PROPERTIES
        COMPILE_FLAGS "-O3 -fomit-frame-pointer -ffast-math -fno-math-errno -g -fno-strict-aliasing -Wall -Wno-unused-value -Wno-unused -march=core2"
    )
    TARGET_LINK_LIBRARIES(crnlib pthread)
ENDIF()
