CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
PROJECT(binn)

IF(WIN32)
	#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4018 /wd4244")
ENDIF()

SET(SRCDIR "${CMAKE_SOURCE_DIR}/../Libraries/binn-3.0/src")
SET(LIBDIR "${CMAKE_SOURCE_DIR}/../Libraries")

INCLUDE_DIRECTORIES(
    ${SRCDIR}/
)

SET(BINN_SRCS
    ${SRCDIR}/binn.c
)

ADD_LIBRARY(binn STATIC ${BINN_SRCS})