### Makefile.am for the qhull package (config)
### Author: Rafael Laboissiere <rafael@debian.org>
### Created: Mon Dec  3 21:36:21 CET 2001

### Extra files to be included in the tarball

EXTRA_DIST =       \
  README           \
  bootstrap.sh     \
  Makefile-am-main \
  Makefile-am-eg   \
  Makefile-am-html \
  Makefile-am-src

