dnl configure.ac for the qhull package
dnl Author: Rafael Laboissiere <rafael@debian.org>
dnl Created: Mon Dec  3 21:36:21 CET 2001
dnl Draft update for 2011.2: B. Barber, dec'11

AC_INIT(qhull, 6.3.1)
AC_CONFIG_SRCDIR(src/libqhull/libqhull.c)

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR(config)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_LIBTOOL

AC_CONFIG_FILES([
  Makefile 
  src/libqhull/Makefile 
  html/Makefile 
  eg/Makefile
  config/Makefile
])

AC_OUTPUT
